src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Originating_LineItem_ID__c</fullName>
        <description>Originating LineItem from where this Asset is created first</description>
        <inlineHelpText>Originating LineItem from where this Asset is created first</inlineHelpText>
        <label>Originating LineItem ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Opportunity_LineItem_URL__c</fullName>
        <label>Originating Opportunity LineItem</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Renewal_Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets (Renewal Opportunity)</relationshipLabel>
        <relationshipName>Assets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
</CustomObject>